--- a/conky.conf
+++ b/conky.conf
@@ -1,20 +1,22 @@
 conky.config = {
 
--- RALF'S KDE HIRES 2-CORE VMWARE IMPROVED *COVID* CONKY CONFIG
--- May 2020
+-- COVID-19 CONKY CONFIG
+-- July 2020
+-- Ralph Smith, integrated script file design by Avinash H. Duduskar
 
 -- TEMPLATES
 
-template0 = '',                             -- wi-fi network interface name
-template1 = 'ens33',                        -- ethernet network interface name
-template2 = '$HOME/.config/conky/covid/',   -- COVID-19 scripts folder
+template0 = '',                       -- wi-fi network interface name
+template1 = 'ens33',                  -- ethernet network interface name
+template2 = '$HOME/.config/conky/',   -- conky config folder
+
 
 -- EXECUTION
 
 background = true,                    -- fork conky to the background on launch
 disable_auto_reload = false,          -- if true don't reload when conky's config file changes
 total_run_times = 0,                  -- run forever
-update_interval = 1.0,                -- update time on mains (in seconds)
+update_interval = 1.0,                -- update time (in seconds)
 
 -- OPTIONS
 
@@ -28,10 +30,10 @@ top_name_width = 25,                  -- num of chars for process name in top va
 alignment = 'top_right',              -- conky window's anchor point
 double_buffer = true,                 -- rendering style to eliminate flicker
 gap_x = 75,                           -- horizontal gap from edge of screen
-gap_y = 150,                          -- vertical gap from edge of screen
+gap_y = 130,                          -- vertical gap from edge of screen
 minimum_height = 200,                 -- min window Y
-minimum_width = 710,                  -- min window X
-maximum_width = 710,                  -- max window X
+minimum_width = 730,                  -- min window X
+maximum_width = 730,                  -- max window X
 own_window = true,                    -- we have our own special window
 own_window_argb_value = 128,          -- shading for background when own_window_transparent = false
 own_window_argb_visual = true,        -- use the alpha (transparency) channel: alpha/red/green/blue
@@ -81,11 +83,11 @@ ${font Alien Strawberry:size=24}${execi 86400 uname -n}${font}
 ##
 ${font Pragmata Pro Mono:size=11:bold}${time %A %B %-d ◆ Day %-j of %Y}${font}
 
-${tztime America/Vancouver %l:%M %p %Z %a} Tiny Kitten Time
-${font Pragmata Pro Mono:size=10:bold}${time %l:%M %p %Z %a} Local Time${font}
+${tztime America/Vancouver %l:%M %p %Z %a} Vancouver
+${font Pragmata Pro Mono:size=10:bold}${time %l:%M %p %Z %a} New York${font}
 ${tztime Etc/Greenwich %H:%M z  GMT %a} Greenwich Mean Time
-${tztime Europe/London %l:%M %p %Z %a} London England
-#${tztime Asia/Yekaterinburg %l:%M %p YKT %a} Chelyabinsk Russia
+${tztime Europe/London %l:%M %p %Z %a} London
+${tztime Asia/Yekaterinburg %l:%M %p YKT %a} Chelyabinsk
 
 ##
 ## DISTRO INFO
@@ -99,18 +101,15 @@ ${execi 86400 cat /sys/devices/virtual/dmi/id/product_name | sed -e s/,/./}${tab
 System Uptime ${uptime}
 This Desktop ${font Pragmata Pro Mono:size=10:italic}${desktop_name}${font}
 
-#PWD DEBUG: ${texeci 120 pwd}
-#
-      Worldwide     ${texeci 55 ${template2}allcases.sh} cases ${texeci 60 ${template2}alldeaths.sh} deaths
-      United States ${texeci 60 ${template2}uscases.sh} cases ${texeci 60 ${template2}usdeaths.sh} deaths
-      Britain       ${texeci 65 ${template2}ukcases.sh} cases ${texeci 60 ${template2}ukdeaths.sh} deaths
-      New York      ${texeci 70 ${template2}nycases.sh} cases ${texeci 60 ${template2}nydeaths.sh} deaths
+${color #c0fb2d}${font Pragmata Pro:size=22}☣${font}${color}${voffset -88}
 
-      Worldwide     ${texeci 75 ${template2}alllikely.sh} ~infections
-      United States ${texeci 76 ${template2}uslikely.sh} ~infections
-      Britain       ${texeci 77 ${template2}uklikely.sh} ~infections
-      New York      ${texeci 78 ${template2}nylikely.sh} ~infections
-${voffset -270}${color #c0fb2d}${font Pragmata Pro:size=22}☣${font}${color}${voffset 250}
+      Worldwide      ${texeci 55 ${template2}covid.sh world_cases} cases ${texeci 50 ${template2}covid.sh world_deaths} deaths
+      United States  ${texeci 60 ${template2}covid.sh us_cases} cases ${texeci 45 ${template2}covid.sh us_deaths} deaths
+      New York       ${texeci 70 ${template2}covid.sh ny_cases} cases ${texeci 66 ${template2}covid.sh ny_deaths} deaths
+      Erie County NY ${texeci 73 ${template2}covid.sh erie_cases} cases ${texeci 72 ${template2}covid.sh erie_deaths} deaths
+      Britain        ${texeci 65 ${template2}covid.sh uk_cases} cases ${texeci 61 ${template2}covid.sh uk_deaths} deaths
+      India          ${texeci 73 ${template2}covid.sh india_cases} cases ${texeci 58 ${template2}covid.sh india_deaths} deaths
+
 ##
 ## Battery info: color red used for low batt+not charging, grey used for zero batt (prolly waiting on data)
 ##
@@ -137,8 +136,6 @@ memory          ${memmax} ram  ${membar 6}
 ##
 /               ${fs_size /} ${fs_type /} ${fs_bar 6 /}
 /home           ${fs_size /home} ${fs_type /home} ${fs_bar 6 /home}
-/mnt/akashic    ${if_mounted /mnt/akashic}${fs_size /mnt/akashic} ${fs_type /mnt/akashic} ${fs_bar 6 /mnt/akashic}${else}           not mounted${endif}
-#/mnt/vm-host     ${if_mounted /mnt/hgfs}${fs_size /mnt/hgfs} hgfs ${fs_bar 6 /mnt/hgfs}${else}          not mounted${endif}
 
 ##
 ## TOP PROCESSES
@@ -154,4 +151,11 @@ ${top name 2} ${top cpu 2} ${top mem 2}
 #Wired Ethernet
 ${color1}${downspeedgraph ${template1} 40,325 ffffff ffffff -l}${alignr}${upspeedgraph ${template1} 40,325 ffffff ffffff -l}${color}
 Net Down ${downspeed ${template1}}${alignr}Net Up ${upspeed ${template1}}
+#
+## NETWORK THROUGHPUT (WI-FI)
+##
+#Wi-Fi Signal ${wireless_link_qual_perc ${template0}}% ${wireless_link_bar 6 ${template0}}
+#
+#${color1}${downspeedgraph ${template0} 40,325 ffffff ffffff -l}${alignr}${upspeedgraph ${template0} 40,325 ffffff ffffff -l}${color}
+#Down ${downspeed ${template0}}${alignr}${upspeed ${template0}} Up
 ]];
